@@ -72,15 +72,19 @@ def get_supported_python_versions(distribution):
     return versions
 
 
-def supports_python_version(distribution, version=None):
+def python_runtime_version():
+    """Compute current runtime Python version from :attr:`sys.version_info`."""
+    return '{0!s}.{1!s}'.format(*sys.version_info[0:2])
+
+
+def supports_python_version(distribution, version):
     """Return True if ``distribution`` claims support of ``version``.
 
     distribution
       Distribution object, as returned by ``pkg_resources.get_distribution()``.
 
     version
-      Python version, as a string. If omitted or `None` (the default), the
-      current Python version is retrieved from ``sys.version_info``.
+      Python version, as a string.
 
     >>> import pkg_resources
     >>> dist = pkg_resources.get_distribution('hospital')
@@ -91,6 +95,4 @@ def supports_python_version(distribution, version=None):
     False
 
     """
-    if version is None:
-        version = '{0!s}.{1!s}'.format(*sys.version_info[0:2])
     return version in get_supported_python_versions(distribution)
